--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.1</version>
+		<version>3.2.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -15,6 +15,7 @@
 	<properties>
 		<repackage.classifier/>
 		<java.version>17</java.version>
+		<spring-framework.version>6.2.0-SNAPSHOT</spring-framework.version>
 	</properties>
 	<dependencies>
 		<dependency>
